Initial auth setup

--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -15,6 +15,14 @@
     "Folders": []
   },
 
+  "Jwt": {
+    "Issuer": "localhost",
+    "SecurityKey": "A really seriously dangerously long security key",
+    "AccessTokenExpiryInMinutes": 10000,
+    "RefreshTokenExpiryInDays": 7,
+    "AllowInsecureHttp": true
+  },
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
