--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -22,6 +22,13 @@
     "RefreshTokenExpiryInDays": 7,
     "AllowInsecureHttp": true
   },
+  
+  "Email": {
+    "Username": "89e5ee001@smtp-brevo.com",
+    "Password": "rOUs1FYDJjWfVq9w",
+    "SmtpHost": "smtp-relay.brevo.com",
+    "SmtpPort": "587"
+  },
 
   "Serilog": {
     "MinimumLevel": {
