Complete OTP generation, login, and sign up

--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -1,18 +1,17 @@
 {
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "https://localhost:5000"
-      }
-    }
-  },
-
   "ConnectionStrings": {
     "Default": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=kratos_llp;Connection Lifetime=0;Include Error Detail=true;"
   },
 
   "Defaults": {
     "Folders": ["uploads/services"]
+  },
+  
+  "Email": {
+    "Username": "meetthakar1995@gmail.com",
+    "Password": "cvqq hqfg eknl sbug ",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587
   },
 
   "Jwt": {
@@ -22,12 +21,10 @@
     "RefreshTokenExpiryInDays": 7,
     "AllowInsecureHttp": true
   },
-  
-  "Email": {
-    "Username": "89e5ee001@smtp-brevo.com",
-    "Password": "rOUs1FYDJjWfVq9w",
-    "SmtpHost": "smtp-relay.brevo.com",
-    "SmtpPort": "587"
+
+  "Otp": {
+    "ExpiryInMinutes": 5,
+    "ResendAllowedAfterMinutes": 1
   },
 
   "Serilog": {
