Complete JWT auth

--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -16,7 +16,7 @@
 
   "Jwt": {
     "Issuer": "localhost",
-    "SecurityKey": "A really seriously dangerously long security key",
+    "SecurityKey": "A really seriously dangerously long security key that has to be 256 keys long!",
     "AccessTokenExpiryInMinutes": 10000,
     "RefreshTokenExpiryInDays": 7,
     "AllowInsecureHttp": true
