Add Google OAuth, extract common code to services

--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -22,6 +22,10 @@
     "AllowInsecureHttp": true
   },
 
+  "OAuth": {
+    "GoogleClientId": "613291692381-mk9vs8415bc988l2vd0pfn5qcrknf4mv.apps.googleusercontent.com"
+  },
+
   "Otp": {
     "ExpiryInMinutes": 5,
     "ResendAllowedAfterMinutes": 1
