--- a/api/src/appsettings.Development.json
+++ b/api/src/appsettings.Development.json
@@ -7,6 +7,14 @@
     "Folders": ["uploads/articles", "uploads/services", "uploads/members", "uploads/display-pictures"]
   },
 
+  "Cookies": {
+    "SameSite": "None",
+    "Secure": true,
+    "HttpOnly": true
+  },
+
+  "AllowedOrigins": ["http://172.24.0.1:5173", "http://localhost:5173"],
+
   "Email": {
     "Username": "meetthakar1995@gmail.com",
     "Password": "cvqq hqfg eknl sbug ",
@@ -17,7 +25,7 @@
   "Jwt": {
     "Issuer": "localhost",
     "SecurityKey": "A really seriously dangerously long security key that has to be 256 keys long!",
-    "AccessTokenExpiryInMinutes": 10000,
+    "AccessTokenExpiryInMinutes": 1,
     "RefreshTokenExpiryInDays": 7,
     "AllowInsecureHttp": true
   },
